--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ body{
 
 .logo{
     top:0; 
-    padding: 26%;
+    position: fixed;
+    padding: 1.1rem;
     text-decoration: none;
-    position:absolute;
     background-color: green;
     background-image: linear-gradient(rgb(24, 233, 24),lightgreen);
 }
@@ -48,11 +48,11 @@ body{
 }
 
 .right{
-    background-image: linear-gradient(rgba(29, 26, 26, 0.5), rgba(15, 51, 9, 0.1)),url('2.jpg');
+    background-image: linear-gradient(rgba(128, 127, 127, 0.281), rgba(35, 36, 35, 0.1)),url('2.jpg');
     background-size: cover; 
     background-position: center; 
     height: 100%; 
-    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.25);
+   
 }
 
 .left{
@@ -60,25 +60,24 @@ body{
 }
 
 .nav-right{
+    z-index: 50;
+    left:0;
     display: flex;
+    position: fixed;
     justify-content: flex-start;
     margin-top: 1rem;
-    margin-left: 2rem;
+    margin-left: 0rem;
     font-family: 'Eczar', serif;
 }
-.nav-left{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 1.2rem;
-    left:0;
-}
-.right-nav-top{
+
+.nav-top{
     text-decoration: none;
-    color:rgb(255, 255, 255);
-    padding: 0 10rem 0 10px;
+    color:rgb(10, 9, 9);
+    padding: 0 11rem 0 7rem;
+    margin-bottom: 1.2rem;
 }
-.right-nav-top:hover{
-    color:yellow
+.nav-top:hover{
+    color:rgb(0, 38, 255)
 }
 
 .head{
@@ -103,7 +102,7 @@ body{
 }
 
 .profile{
-    color: white;
+    color: rgb(14, 13, 13);
     margin-left: auto;
 }
 
